# hd44780-driver

./: .travis.yml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: quick-check.yml  rust.yml
examples/arduino-uno/: Cargo.toml  README.md  avr-atmega328p.json
examples/arduino-uno/src/: main.rs
examples/atmega328-nostd/: Cargo.toml  README.md  flash.sh
examples/atmega328-nostd/.cargo/: config.toml
examples/atmega328-nostd/src/: main.rs
examples/esp32-nostd/: Cargo.toml  README.md  build.rs
examples/esp32-nostd/.cargo/: config.toml
examples/metro_m0/: .gdbinit  Cargo.toml
examples/metro_m0/.cargo/: config
examples/metro_m0/examples/: 4bit.rs  basic.rs  scrolling.rs
examples/pipico/: Cargo.toml  README.md  openocd.gdb
examples/pipico/.cargo/: config.toml
examples/pipico/.vim/: coc-settings.json
examples/pipico/src/: main.rs
examples/raspberrypi/: .gitignore  Cargo.toml
examples/raspberrypi/src/: main.rs
examples/rp2040-nostd/: Cargo.toml  README.md
examples/rp2040-nostd/.cargo/: config.toml
examples/stm32f30x/: Cargo.toml  memory.x
examples/stm32f30x-i2c/: Cargo.toml  README  memory.x
examples/stm32f30x-i2c/.cargo/: config
examples/stm32f30x-i2c/src/: main.rs
examples/stm32f30x/src/: main.rs
examples/stm32f429disco-i2c/: Cargo.toml
examples/stm32f429disco-i2c/src/: main.rs
src/: character.rs  charset.rs  display_mode.rs  display_size.rs  display_status.rs  entry_mode.rs  error.rs  lib.rs  memory_map.rs  setup.rs  writer.rs
src/bus/: eightbit.rs  fourbit.rs  i2c.rs  i2c_mcp23008.rs  mod.rs
src/masync/: mod.rs
src/masync/bus/: eightbit.rs  fourbit.rs  i2c.rs  mod.rs
src/non_blocking/: bus.rs  mod.rs
src/non_blocking/bus/: eightbit.rs  fourbit.rs  i2c.rs  mod.rs
src/setup/: blocking.rs  mod.rs  non_blocking.rs
