[package]
name = "metro_m0_hd44780_examples"
version = "0.1.0"
authors = ["John Doneth <doneth7@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT"

[dependencies]
cortex-m = "~0.4"
hd44780-driver = { path = "../.." }
atsamd21-hal = "~0.1"
embedded-hal = "~0.2"
metro_m0 = { git = "https://github.com/wez/atsamd21-rs.git" }

cortex-m-rt = "*"

[dev-dependencies]
panic-abort = "~0.1"
panic-semihosting = "~0.1"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"
sx1509 = "~0.2"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd21-hal/samd21g18a"]
rt = ["atsamd21-hal/rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
