[package]
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
name = "stm32f30x-hd44780-example"
version = "0.1.0"
license = "MIT"
publish = false

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
hd44780-driver = { path = "../.." }

[dependencies.hal]
version = "0.2.0"
package = "stm32f30x-hal"

[profile.release]
codegen-units = 1
debug = true
lto = true
