[package]
authors = ["Chevdor <chevdor@gmail.com>"]
edition = "2018"
name = "stm32f4-hd44780-i2c-example"
version = "0.1.0"
license = "MIT"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
panic-halt = "0.2"
hd44780-driver = { path = "../.." }
stm32f4xx-hal = { version = "*", features = ["stm32f429", "rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
